--- a/app_documento/app/assets/stylesheets/formtastic_changes.css.scss
+++ b/app_documento/app/assets/stylesheets/formtastic_changes.css.scss
@@ -28,6 +28,11 @@ form.formtastic {
     label {
       margin-left: 10px;
     }
+
+    select{
+      margin-left: 10px;
+    }
+
     input[type="submit"]{
       padding: 10px;
       margin-bottom: 5px;
