--- a/app_documento/app/assets/stylesheets/inicio.css.scss
+++ b/app_documento/app/assets/stylesheets/inicio.css.scss
@@ -71,10 +71,19 @@ p {
       height: 100%;
       padding: 5px;
 
+
       table {
         border: 0;
 
         tbody {
+          td{
+
+      /*Puntos suspensivos*/
+      white-space: nowrap;
+      overflow: hidden;
+      -o-text-overflow: ellipsis;
+      -ms-text-overflow: ellipsis;
+          }
           tr:nth-child(even) {
             background-color: #5294aa;
 
