--- a/app_documento/app/views/usuarios/index.html.erb
+++ b/app_documento/app/views/usuarios/index.html.erb
@@ -1,4 +1,4 @@
-
+<link href="/assets/dataTables/jquery.dataTables.css?body=1" media="all" rel="stylesheet" type="text/css" />
 <span class="titulos_list">
   <h1>Usuarios</h1>
 </span>
