--- a/app_documento/app/views/productos/index.html.erb
+++ b/app_documento/app/views/productos/index.html.erb
@@ -1,61 +1,97 @@
-<h1>Listing productos</h1>
+<h1><%=flash[:title]%></h1>
 
-<%= link_to 'New Producto', new_producto_path %>
-
-<table id="productos">
-  <thead>
-    <th class="paisProd">Pais elaboracion</th>
-    <th class="marcaProd">Marca</th>
-    <th class="tipoProd">Tipo</th>
-    <th class="regisProd">Registro sanitario</th>
-    <th class="nombreProd">Nombre</th>
-    <!-- <th>Fabricante</th> -->
-    <!-- <th>Codigo arancelario</th> -->
-    <th class="tipoProd remX"></th>
-  </thead>
-
-  <tbody>
-<% @productos.each do |producto| %>
-    <tr>
-      <td class="paisProd">
-        <%= producto.pais_elaboracion %>
-          <div class="filter">
-            <% if producto.pais_elaboracion.downcase == "venezuela" %>
-            Nacional
-            <% else %>
-            Importado
-            <% end %>
-          </div>
-      </td>
-      <td class="marcaProd"><%= producto.marca %></td>
-      <td class="tipoProd">
-        <center>
-          <% if producto.alimento %>
-            <div class="sort">alimento</div>
-            <%= image_tag("food.png", :id => "food") %>
-          <% else %>
-            <div class="sort">bebida</div>
-            <%= image_tag("wine.png", :id => "wine") %>
-          <% end %>
-        </center>
-      </td>
-      <td class="regisProd"><%= producto.registro_sanitario %></td>
-      <td class="nombreProd"><%= link_to content_tag(:div, producto.nombre), producto %></td>
-      <!-- <td><%= producto.fabricante %></td> -->
-      <!-- <td><%= producto.codigo_arancelario %></td> -->
-      <td class="tipoProd remX"><%= link_to '✘', producto, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-    </tr>
+<% if current_usuario.admin > 0 %>
+  <button><%= link_to 'Nuevo producto', new_producto_path %></button>
 <% end %>
-  </tbody>
-
-  <tfoot>
-    <th class="paisProd">Elaboracion</th>
-    <th class="marcaProd">Marca</th>
-    <th class="tipoProd">Tipo</th>
-    <th class="regisProd">Registro sanitario</th>
-    <th class="nombreProd">Nombre</th>
-    <!-- <th>Fabricante</th> -->
-    <!-- <th>Codigo arancelario</th> -->
-    <th class="tipoProd remX"></th>
-  </tfoot>
-</table>
+<div class="area_filtro" id="area_filtro_prod">
+  <div class="filtro_dinamico">
+    <div class="filtro_wrapper">
+    <table id="Procedencia_prod">
+      <thead>
+        <th>Procedencia</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td>
+            Todo
+            <%= image_tag("flecha_select.png", :id => "arrow_proc") %>
+          </td>
+        </tr>
+        <tr>
+          <td>Nacional</td>
+        </tr>
+        <tr>
+          <td>Internacional</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+    <%= semantic_form_for @producto, :html => { :id => "proc_form"},:remote => true, :url => prov_filter_productos_path do |f| %>
+      <%= f.input :pais_elaboracion, :as => :hidden, :input_html => { :id => 'proc_input' } %>
+    <% end %>
+    <div class="filtro_wrapper">
+    <table id="Tipo_prod">
+      <thead>
+        <th>Tipo</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td>
+            Todo
+            <%= image_tag("flecha_select.png", :id => "arrow_tipo") %>
+          </td>
+        </tr>
+        <tr>
+          <td>Alimento</td>
+        </tr>
+        <tr>
+          <td>Licor</td>
+        </tr>
+      </tbody>
+    </table>
+    </div>
+    <%= semantic_form_for @producto, :html => { :id => "type_form"},:remote => true, :url => type_filter_productos_path do |f| %>
+      <%= f.input :alimento, :as => :hidden, :input_html => { :id => 'type_input' } %>
+    <% end %>
+    <table id="marcas">
+      <thead>
+        <th class="regisProd">Marcas</th>
+      </thead>
+      <tbody>
+        <% @marcas.each do |marca| %>
+          <tr>
+            <td>
+              <%=marca%>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+    <%= form_tag marca_filter_productos_path, :id => "marca_form", :remote => true do %>
+      <div id="marca_inputs"></div>
+    <% end %>
+    <table id="productos">
+      <thead>
+        <th class="regisProd">Productos</th>
+      </thead>
+      <tbody id="body_prod">
+        <% @productos.each do |producto| %>
+          <tr>
+            <td>
+              <% if producto.alimento %>
+                <%= image_tag("food.png", :id => "food", :class => "foodwine", :title => "Alimento") %>
+              <% else %>
+                <%= image_tag("wine.png", :id => "wine", :class => "foodwine", :title => "Licor") %>
+              <% end %>
+              <%= link_to "#{producto.nombre} </br> <span style='font-size:10px;'>#{producto.registro_sanitario}</span>".html_safe, producto %> </br>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
+<%= javascript_tag do %>
+  marcasDisponibles =  <%=raw @marcas.to_json %>
+  fabricantesDisponibles =  <%=raw @fabricantes.to_json %>
+<% end %>
