problema con javascript solucionado

--- a/app_documento/app/views/documentos/show.html.erb
+++ b/app_documento/app/views/documentos/show.html.erb
@@ -30,6 +30,8 @@
   <%= @documento.producto %>
 </p>
 
+<%= image_tag @documento.pdf.url %>
+
 
 <%= link_to 'Edit', edit_documento_path(@documento) %> |
 <%= link_to 'Back', documentos_path %>
