--- a/app_documento/app/views/productos/_form.html.erb
+++ b/app_documento/app/views/productos/_form.html.erb
@@ -58,7 +58,5 @@
     </table>
   </ul>
 <% end %>
-<%= javascript_tag do %>
-  marcasDisponibles =  <%=raw @marcas.to_json %>
-  fabricantesDisponibles =  <%=raw @fabricantes.to_json %>
+<%= content_tag :div, :id => "autocomplete", :data => {:marcasDisponibles => @marcas, :fabricantesDisponibles => @fabricantes } do %>
 <% end %>
