--- a/app_documento/app/views/productos/show.html.erb
+++ b/app_documento/app/views/productos/show.html.erb
@@ -7,6 +7,7 @@
     </td>
     <td>
       <div class="title_show">
+        <button style="float:right;"> <%= link_to 'Agregar Documento', new_documento_path %></button>
         <h2>Documentos</h2>
       </div>
     </td>
