--- a/app_documento/app/assets/stylesheets/usuarios.css.scss
+++ b/app_documento/app/assets/stylesheets/usuarios.css.scss
@@ -4,6 +4,19 @@
 $background_color : #133a6b;
 
 #tabla_list_usuario_wrapper {
+  width: 100%;
+  height: 250px;
+
+  td, th {
+    max-width: 120px;
+    /*Puntos suspensivos*/
+    white-space: nowrap;
+    overflow: hidden;
+    -o-text-overflow: ellipsis;
+    -ms-text-overflow: ellipsis;
+    text-overflow: ellipsis;
+  }
+
   thead {
     th{
     }
@@ -18,7 +31,6 @@ $background_color : #133a6b;
     background-color: #FFF !important;
     }
   }
-
 }
 
 .title_show {
@@ -27,7 +39,7 @@ $background_color : #133a6b;
   padding-left: 20px;
   margin-top: 50px;
   margin-left: 20px;
-  border-bottom: 1px solid $background_color;  
+  border-bottom: 1px solid $background_color;
 }
 
 .cos_icon {
@@ -70,23 +82,23 @@ $background_color : #133a6b;
 .conf_list {
 }
 
-.conf_list ul { 
+.conf_list ul {
   width: 300px;
   margin-left: 20px;
-  list-style:none; 
-  padding:10px 0; 
+  list-style:none;
+  padding:10px 0;
 }
 
-.conf_list ul li { 
-  padding:0 10px; 
+.conf_list ul li {
+  padding:0 10px;
 }
 
-.conf_list ul li a { 
-  text-decoration:none; color:#eee; 
+.conf_list ul li a {
+  text-decoration:none; color:#eee;
 }
 
-.conf_list ul li a:hover { 
-  text-decoration:underline; 
+.conf_list ul li a:hover {
+  text-decoration:underline;
 }
 
 .customize {
