--- a/app_documento/app/assets/stylesheets/inicio.css.scss
+++ b/app_documento/app/assets/stylesheets/inicio.css.scss
@@ -114,7 +114,6 @@ p {
             margin: 5px 20px 0 20px !important;
             cursor: default;
           }
-
         }
       }
     }
@@ -133,9 +132,9 @@ p {
   height: 300px;
 }
 
-
 .titulos_inicio {
-
   font-size: 20px;
   font-family: arial;
+  font-weight: bold;
+  font-style: italic;
 }
