--- a/app_documento/app/views/usuarios/index.html.erb
+++ b/app_documento/app/views/usuarios/index.html.erb
@@ -37,7 +37,7 @@
             <%   when 2 %>
             Super-Admin
             <%   else   %>
-            Contactar servicio
+            Error: Contactar servicio técnico.
           <% end %>
         </td>
       </tr>
