--- a/app_documento/app/views/usuarios/_form.html.erb
+++ b/app_documento/app/views/usuarios/_form.html.erb
@@ -22,14 +22,6 @@
         <%= f.input :password, :as => :hidden, :input_html => {:value => flash[:contrasena] }  %>
         <tr>
           <td>
-            <%= f.input :compania, :label => "Compañia"%>
-          </td>
-          <td>
-            <%= f.input :rif, :label => "RIF"%>
-          </td>
-        </tr>
-        <tr>
-          <td>
             <%= f.input :nombre, :label => "Nombre"%>
           </td>
           <td>
@@ -38,17 +30,30 @@
         </tr>
         <tr>
           <td>
-            <%= f.input :telefono, :label => "Teléfono"%>
+            <%= f.input :compania, :label => "Compañia"%>
           </td>
           <td>
+            <%= f.input :telefono, :label => "Teléfono"%>
+          </td>
+        </tr>
+        <tr>
+          <td>
             <% if current_usuario.admin == 2 %>
-              <%= f.input :admin, :label => "Permisología", :as => :radio, :collection => [["Cliente", 0], ["Admin", 1], ["Super-Admin", 2]]%>
+              <%= f.input :admin, :label => "Permisos", :as => :radio, :collection => [["Cliente", 0], ["Admin", 1], ["Super-Admin", 2]]%>
             <% else %>
               <%= f.input :admin, :as => :hidden, :input_html => { :value => 0 } %>
                 <%= f.action :submit, :label => flash[:accion] %>
+              <button style= Padding:10px>
+                <%= link_to 'Volver', @usuario %>
+              </button>
             <% end %>
-
           </td>
+          <td>
+            <% if current_usuario.admin == 0 %>
+              <%= f.input :rif, :label => "RIF"%>
+              <% end %>
+          </td>
+          
         </tr>
         <% if current_usuario.admin == 2 %> 
         <tr>
@@ -56,6 +61,10 @@
             <center>
               <%= f.action :submit, :label => flash[:accion] %>
             </center>
+            <button style= Padding:10px>
+              <%= link_to 'Volver', @usuario %>
+            </button>
+
           </td>
           <td></td>
         </tr>
