Script para generar base de datos, y documento listo

--- a/app_documento/app/assets/stylesheets/productos.css.scss
+++ b/app_documento/app/assets/stylesheets/productos.css.scss
@@ -62,6 +62,9 @@ $list_selected : #396877;
 }
 
 #productos_wrapper{
+  .dataTables_scrollBody{
+    height: 269px !important;
+  }
   border-left: 2px solid $list_selected;
   tbody{
     tr{
