--- a/app_documento/app/views/productos/index.html.erb
+++ b/app_documento/app/views/productos/index.html.erb
@@ -24,7 +24,7 @@
           <td>Nacional</td>
         </tr>
         <tr>
-          <td>Internacional</td>
+          <td>Importado</td>
         </tr>
       </tbody>
     </table>
